--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                                     <span class="project-content">
                                         <span class="number">01</span>
                                         <span class="project-right">
-                                            <span class="category">UI/UX Design</span>
+                                            <span class="category">Digital Marketing</span>
                                             <span class="title">Marketing Solution For Brand</span>
                                         </span>
                                     </span>
@@ -605,8 +605,8 @@
                                     <span class="project-content">
                                         <span class="number">02</span>
                                         <span class="project-right">
-                                            <span class="category">Digital Marketing</span>
-                                            <span class="title">Sass Mobile Dashboard Design</span>
+                                            <span class="category">UI/UX Designing</span>
+                                            <span class="title">Graphic Designing</span>
                                         </span>
                                     </span>
                                 </button>
@@ -620,7 +620,7 @@
                                         </div>
                                         <div class="content-right">
                                             <div class="project-thumb">
-                                                <img src="assets/img/project/project-1.png" alt="">
+                                                <img src="assets/img/project/project-2.png" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -648,7 +648,7 @@
                                         </div>
                                         <div class="content-right">
                                             <div class="project-thumb">
-                                                <img src="assets/img/project/project-1.png" alt="">
+                                                <img src="assets/img/project/project-3.png" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -662,7 +662,7 @@
                                         <span class="number">04</span>
                                         <span class="project-right">
                                             <span class="category">Software Development</span>
-                                            <span class="title">Medical Website Development</span>
+                                            <span class="title">Website Development</span>
                                         </span>
                                     </span>
                                 </button>
@@ -676,7 +676,7 @@
                                         </div>
                                         <div class="content-right">
                                             <div class="project-thumb">
-                                                <img src="assets/img/project/project-1.png" alt="">
+                                                <img src="assets/img/project/project-4.png" alt="">
                                             </div>
                                         </div>
                                     </div>
@@ -810,27 +810,7 @@
         </section>
         <!-- ./ blog-section -->
 
-        <section class="sponsor-section pb-130">
-            <div class="container">
-                <div class="sponsor-wrap">
-                    <div class="sponsor-item item-1">
-                        <h3 class="title">WORKED WITH <br>GLOBAL LARGEST <br> BRANDS</h3>
-                    </div>
-                    <div class="sponsor-item">
-                        <a href="#"><img src="assets/img/sponsor/sponsor-1.png" alt="sponsor"></a>
-                    </div>
-                    <div class="sponsor-item">
-                        <a href="#"><img src="assets/img/sponsor/sponsor-2.png" alt="sponsor"></a>
-                    </div>
-                    <div class="sponsor-item">
-                        <a href="#"><img src="assets/img/sponsor/sponsor-3.png" alt="sponsor"></a>
-                    </div>
-                    <div class="sponsor-item">
-                        <a href="#"><img src="assets/img/sponsor/sponsor-4.png" alt="sponsor"></a>
-                    </div>
-                </div>
-            </div>
-        </section>
+       
         <!-- ./ blog-section -->
 
         <footer class="footer-section bg-dark-1">
