--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
     <div id="smooth-wrapper">
         <div id="smooth-content">
 
-        <section class="page-header" data-background="assets/img/bg-img/page-header-bg.jpg">
+        <section class="page-header" data-background="assets/img/bg-img/page-header-bg.png">
             <div class="overlay"></div>
             <div class="shapes">
                 <div class="shape shape-1"><img src="assets/img/shapes/page-header-shape-1.png" alt="shape"></div>
@@ -211,10 +211,10 @@
                                 <img class="shape shape-2" src="assets/img/shapes/about-shape-2.png" alt="about">
                             </div>
                             <div class="img-1 reveal">
-                                <img src="assets/img/images/about-img-2.jpg" alt="about">
+                                <img src="assets/img/images/about-img-2.png" alt="about">
                             </div>
                             <div class="img-2 reveal">
-                                <img src="assets/img/images/about-img-3.jpg" alt="about">
+                                <img src="assets/img/images/about-img-3.jpeg" alt="about">
                             </div>
                         </div>
                     </div>
