--- a/blog-grid-2.html
+++ b/blog-grid-2.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
 
         <!-- Site Title -->
-        <title>Runok - Web Agency HTML5 Template</title>
+        <title>Blogs - Savvy Mosaic Solutions</title>
 
         <!-- Place favicon.ico in the root directory -->
         <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
@@ -194,8 +194,8 @@
             </div>
             <div class="container">
                 <div class="page-header-content text-center">
-                    <h1 class="title">Blog List Style 2</h1>
-                    <h4 class="sub-title"><a class="home" href="index.html">Home </a><span></span><a class="inner-page" href="blog-grid-2.html"> Blog List Style 2</a></h4>
+                    <h1 class="title">Blogs</h1>
+                    <h4 class="sub-title"><a class="home" href="index.html">Home </a><span></span><a class="inner-page" href="blog-grid-2.html"> Blogs</a></h4>
                 </div>
             </div>
         </section>
@@ -216,9 +216,9 @@
                                             <li><i class="fa-sharp fa-regular fa-clock"></i>25 June, 2024</li>
                                             <li><i class="fa-light fa-user"></i>Post by: Admin</li>
                                         </ul>
-                                        <h3 class="title"><a href="blog-details.html">Unveiling the Strategies and Techniques that Define Agecis's Success"</a></h3>
+                                        <h3 class="title"><a href="hello-world.html">Hello World</a></h3>
                                         <p>Where online presence defines success, our agency stands at the forefront of crafting web experiences that transcend mere aesthetics. Our web design strategies are built upon a foundation of user-centricity, innovation, and a deep understanding of your brand.</p>
-                                        <a href="blog-details.html" class="rr-primary-btn">Read More <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
+                                        <a href="hello-world.html" class="rr-primary-btn">Read More <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -232,9 +232,9 @@
                                             <li><i class="fa-sharp fa-regular fa-clock"></i>25 June, 2024</li>
                                             <li><i class="fa-light fa-user"></i>Post by: Admin</li>
                                         </ul>
-                                        <h3 class="title"><a href="blog-details.html">From Concept to Creation with Agecis's Web Design Wizards</a></h3>
+                                        <h3 class="title"><a href="hello-world.html">From Concept to Creation with Agecis's Web Design Wizards</a></h3>
                                         <p>Where online presence defines success, our agency stands at the forefront of crafting web experiences that transcend mere aesthetics. Our web design strategies are built upon a foundation of user-centricity, innovation, and a deep understanding of your brand.</p>
-                                        <a href="blog-details.html" class="rr-primary-btn">Read More <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
+                                        <a href="hello-world.html" class="rr-primary-btn">Read More <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -248,9 +248,9 @@
                                             <li><i class="fa-sharp fa-regular fa-clock"></i>25 June, 2024</li>
                                             <li><i class="fa-light fa-user"></i>Post by: Admin</li>
                                         </ul>
-                                        <h3 class="title"><a href="blog-details.html">Exploring the Creative Process at Agecis Where Web Design Meets Imagination</a></h3>
+                                        <h3 class="title"><a href="hello-world.html">Exploring the Creative Process at Agecis Where Web Design Meets Imagination</a></h3>
                                         <p>Where online presence defines success, our agency stands at the forefront of crafting web experiences that transcend mere aesthetics. Our web design strategies are built upon a foundation of user-centricity, innovation, and a deep understanding of your brand.</p>
-                                        <a href="blog-details.html" class="rr-primary-btn">Read More <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
+                                        <a href="hello-world.html" class="rr-primary-btn">Read More <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -264,9 +264,9 @@
                                             <li><i class="fa-sharp fa-regular fa-clock"></i>25 June, 2024</li>
                                             <li><i class="fa-light fa-user"></i>Post by: Admin</li>
                                         </ul>
-                                        <h3 class="title"><a href="blog-details.html">How Agecis Puts Your Audience First in Every Website Project</a></h3>
+                                        <h3 class="title"><a href="hello-world.html">How Agecis Puts Your Audience First in Every Website Project</a></h3>
                                         <p>Where online presence defines success, our agency stands at the forefront of crafting web experiences that transcend mere aesthetics. Our web design strategies are built upon a foundation of user-centricity, innovation, and a deep understanding of your brand.</p>
-                                        <a href="blog-details.html" class="rr-primary-btn">Read More <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
+                                        <a href="hello-world.html" class="rr-primary-btn">Read More <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
