--- a/contact.html
+++ b/contact.html
@@ -300,7 +300,7 @@
 
         <div class="map-wrapper pb-130">
             <div class="container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8826.923787362664!2d-118.27754354757262!3d34.03471770929568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20California%2C%20Hoa%20K%E1%BB%B3!5e0!3m2!1svi!2s!4v1566525118697!5m2!1svi!2s" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11506.789532852214!2d-79.5381767!3d43.8621006!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b293e6f4e3b65%3A0x86da05dd3c6f07cb!2sSavvy%20Mosaic%20Solutions!5e0!3m2!1sen!2s!4v1721628870021!5m2!1sen!2s" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
             </div>
         </div>
         <!-- ./ map-wrapper -->
