--- a/faq.html
+++ b/faq.html
@@ -185,7 +185,7 @@
     <div id="smooth-wrapper">
         <div id="smooth-content">
 
-        <section class="page-header" data-background="assets/img/bg-img/page-header-bg.jpg">
+        <section class="page-header" data-background="assets/img/bg-img/faqs-page-header-bg.png">
             <div class="overlay"></div>
             <div class="shapes">
                 <div class="shape shape-1"><img src="assets/img/shapes/page-header-shape-1.png" alt="shape"></div>
