--- a/project.html
+++ b/project.html
@@ -212,7 +212,7 @@
                             </div>
                             <div class="cs-content">
                                 <span class="number">01</span>
-                                <h3 class="title"><a href="alyy-graphy.html">Medical Application Design</a></h3>
+                                <h3 class="title"><a href="alyy-graphy.html">Alyy Graphy</a></h3>
                             </div>
                         </div>
                     </div>
